--- a/async/ex.answer.html
+++ b/async/ex.answer.html
@@ -8,6 +8,6 @@
     <h1>Exercise: Async FP</h1>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.1/rxjs.umd.min.js"></script>
-    <script src="ex.js"></script>
+    <script src="ex.answer.js"></script>
   </body>
 </html>
